--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,9 +19,11 @@ Imports:
     httr
 Suggests: 
     covr,
-    httpuv
+    httpuv,
+    spelling
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
 Depends: 
     R (>= 2.10)
+Language: en-GB
