--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,8 +2,8 @@ pandoc: 3.1.1
 pkgdown: 2.0.7
 pkgdown_sha: ~
 articles: {}
-last_built: 2024-02-12T06:40Z
+last_built: 2024-02-13T16:55Z
 urls:
-  reference: https://oxford-ihtm.io/icd/reference
-  article: https://oxford-ihtm.io/icd/articles
+  reference: https://oxford-ihtm.io/codigo/reference
+  article: https://oxford-ihtm.io/codigo/articles
 
