create function to structure icd_get_foundation output

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(icd_get_entity)
 export(icd_get_foundation)
 export(icd_oauth_client)
 export(icd_search_foundation)
+export(icd_structure_foundation)
 importFrom(httr,oauth2.0_token)
 importFrom(httr,oauth_app)
 importFrom(httr,oauth_endpoint)
