function to get release IDs; fix #29 and fix #31

--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -65,6 +65,10 @@ reference:
     - icd_check_release
     - icd_check_language
 
+  - title: Utilities
+    contents:
+    - icd_get_releases
+
   - title: Supporting datasets
     contents:
     - icd_versions
