--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(icd_check_language)
 export(icd_check_release)
 export(icd_get_entity)
 export(icd_get_foundation)
+export(icd_get_releases)
 export(icd_oauth_client)
 export(icd_search_foundation)
 export(icd_structure_foundation)
