function to get languages; fix #27; fix #28; fix #30

--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -68,6 +68,7 @@ reference:
   - title: Utilities
     contents:
     - icd_get_releases
+    - icd_get_languages
 
   - title: Supporting datasets
     contents:
