function to retrieve entities; fix #23; fix #24

--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -69,6 +69,7 @@ reference:
     contents:
     - icd_get_releases
     - icd_get_languages
+    - icd_get_entities
 
   - title: Supporting datasets
     contents:
