--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,12 +18,12 @@ License: GPL (>= 3)
 Depends: 
     R (>= 2.10)
 Imports: 
-    httr2
+    httr2,
+    tibble
 Suggests: 
     covr,
     httpuv,
-    spelling,
-    tibble
+    spelling
 Encoding: UTF-8
 LazyData: true
 Language: en-GB
