--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(icd_authenticate)
 export(icd_check_language)
 export(icd_check_release)
+export(icd_get_entities)
 export(icd_get_entity)
 export(icd_get_foundation)
 export(icd_get_languages)
