structure output functions; fix #48; fix #49

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,8 +18,10 @@ License: GPL (>= 3)
 Depends: 
     R (>= 2.10)
 Imports: 
+    dplyr,
     httr2,
-    tibble
+    tibble,
+    tidyr
 Suggests: 
     covr,
     httpuv,
