--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,8 @@ Imports:
 Suggests: 
     covr,
     httpuv,
-    spelling
+    spelling,
+    testthat (>= 3.0.0)
 Encoding: UTF-8
 LazyData: true
 Language: en-GB
@@ -33,3 +34,4 @@ RoxygenNote: 7.2.3
 Roxygen: list(markdown = TRUE)
 URL: https://oxford-ihtm.io/codigo/, https://github.com/OxfordIHTM/codigo
 BugReports: https://github.com/OxfordIHTM/codigo/issues
+Config/testthat/edition: 3
