--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Interface to the International Classification of Diseases (ICD) API
 Version: 0.0.0.9000
 Authors@R: c(
-    person("Anita", "Makori", email = "mark@brixtonhealth.com",
+    person("Anita", "Makori", email = "",
            role = c("aut", "cph")),
     person("Ernest", "Guevarra", 
            comment = c(ORCID = "0000-0002-4887-4415"), 
@@ -25,6 +25,8 @@ Imports:
 Suggests: 
     covr,
     httpuv,
+    knitr,
+    rmarkdown,
     spelling,
     testthat (>= 3.0.0)
 Encoding: UTF-8
@@ -35,3 +37,4 @@ Roxygen: list(markdown = TRUE)
 URL: https://oxford-ihtm.io/codigo/, https://github.com/OxfordIHTM/codigo
 BugReports: https://github.com/OxfordIHTM/codigo/issues
 Config/testthat/edition: 3
+VignetteBuilder: knitr
