--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,8 +1,10 @@
 pandoc: 3.1.1
 pkgdown: 2.0.7
 pkgdown_sha: ~
-articles: {}
-last_built: 2024-02-16T13:24Z
+articles:
+  codigo: codigo.html
+  icd11_foundation: icd11_foundation.html
+last_built: 2024-02-16T15:33Z
 urls:
   reference: https://oxford-ihtm.io/codigo/reference
   article: https://oxford-ihtm.io/codigo/articles
