--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(icd_get_entities)
 export(icd_get_entity)
 export(icd_get_foundation)
 export(icd_get_languages)
+export(icd_get_mms_release)
 export(icd_get_releases)
 export(icd_oauth_client)
 export(icd_search_foundation)
