re-factor icd_search

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,8 @@ export(icd_get_languages)
 export(icd_get_mms_release)
 export(icd_get_releases)
 export(icd_oauth_client)
+export(icd_search)
 export(icd_search_foundation)
-export(icd_search_mms)
 export(icd_structure_autocode)
 export(icd_structure_foundation)
 export(icd_structure_search)
