wrap linearization chapter endpoint; fix #82

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(icd_autocode)
 export(icd_autocode_foundation)
 export(icd_check_language)
 export(icd_check_release)
+export(icd_get_chapter)
 export(icd_get_entities)
 export(icd_get_entity)
 export(icd_get_foundation)
