--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -2,6 +2,9 @@ title: codigo
 
 url: https://oxford-ihtm.io/codigo/
 
+development:
+  mode: auto
+
 template:
   bootstrap: 5
   bootswatch: litera
