--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,11 +3,13 @@ Type: Package
 Title: Interface to the International Classification of Diseases (ICD) API
 Version: 0.0.0.9000
 Authors@R: c(
-    person("Anita", "Makori", email = "",
-           role = c("aut", "cph")),
+    person("Anita", "Makori", role = c("aut", "cph")),
     person("Ernest", "Guevarra", 
            comment = c(ORCID = "0000-0002-4887-4415"), 
-           email = "ernest@guevarra.io", role = c("aut", "cre", "cph")))
+           email = "ernest@guevarra.io", role = c("aut", "cre", "cph")),
+    person("Sanjeev", "Pugazhendhi", role = c("ths", "rev")),
+    person("Williams", "Udoh Ituen-Umanah", role = "rev"),
+    person("Proochista", "Ariana", role = c("rev", "cph")))
 Description: The International Classification of Diseases (ICD) serves a broad 
     range of uses globally and provides critical knowledge on the extent, causes 
     and consequences of human disease and death worldwide via data that is 
@@ -34,7 +36,7 @@ LazyData: true
 Language: en-GB
 RoxygenNote: 7.3.1
 Roxygen: list(markdown = TRUE)
-URL: https://oxford-ihtm.io/codigo/,https://github.com/OxfordIHTM/codigo
+URL: https://oxford-ihtm.io/codigo/, https://github.com/OxfordIHTM/codigo
 BugReports: https://github.com/OxfordIHTM/codigo/issues
 Config/testthat/edition: 3
 VignetteBuilder: knitr
