--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(icd_get_foundation)
 export(icd_get_info)
 export(icd_get_languages)
 export(icd_get_releases)
+export(icd_map)
 export(icd_oauth_client)
 export(icd_search)
 export(icd_search_foundation)
