refactor check functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(icd_structure_foundation)
 export(icd_structure_search)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,filter)
 importFrom(dplyr,pull)
 importFrom(httr2,oauth_client)
 importFrom(httr2,req_headers)
@@ -34,5 +35,7 @@ importFrom(httr2,req_url_path)
 importFrom(httr2,req_url_query)
 importFrom(httr2,request)
 importFrom(httr2,resp_body_json)
+importFrom(rlang,.data)
 importFrom(tibble,tibble)
 importFrom(tidyr,unnest)
+importFrom(utils,head)
