--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -7,9 +7,9 @@ development:
 
 template:
   bootstrap: 5
-  bootswatch: litera
+  bootswatch: journal
   theme: haddock
-  ganalytics: #
+  ganalytics: G-G167Y0E8R0
 
 home:
   links:
@@ -17,11 +17,11 @@ home:
     href: https://www.who.int/standards/classifications/classification-of-diseases
 
 navbar:
-  bg: primary
+  bg: info
   type: light
   structure:
     left:  [home, intro, reference, articles, news]
-    right: [twitter, facebook, linkedin, github]
+    right: [linkedin, mastodon, github]
 
   components:
     articles:
@@ -29,16 +29,12 @@ navbar:
       menu:
       - text: "ICD-11 Foundation"
         href: articles/icd11_foundation.html
-    twitter:
-      icon: "fab fa-twitter fa-lg"
-      href: http://twitter.com/OxIHTM
-    facebook:
-      icon: "fab fa-facebook fa-lg"
-      href: https://www.facebook.com/MSc-in-International-Health-and-Tropical-Medicine-University-of-Oxford-433056700228246/
     linkedin:
       icon: "fab fa-linkedin fa-lg"
-      href: https://www.linkedin.com/company/international-health-and-tropical-medicine
-
+      href: https://www.linkedin.com/company/oxford-ihealth
+    mastodon:
+      icon: "fab fa-mastodon fa-lg"
+      href: https://mastodon.social/@ihealth
 
 reference:
   - title: Description
